--- a/base.ipynb
+++ b/base.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data processing and feature Engineering"
+    "# Data processing and feature engineering"
    ]
   },
   {
@@ -130,8 +130,8 @@
    "metadata": {},
    "source": [
     "in this case the preprocessign techniques used included:\n",
-    "1. removal of commonly used words\n",
-    "2. removal of puctuations\n",
+    "1. remove commonly used words\n",
+    "2. remove  puctuations\n",
     "3. words normalisation"
    ]
   },
